[gd_scene load_steps=3 format=3 uid="uid://do0fda0fj06ak"]

[ext_resource type="Theme" uid="uid://dhb6h35g1bk0x" path="res://data/themes/DefaultTheme.tres" id="1_43m4g"]
[ext_resource type="Script" path="res://sources/gui/Mode.gd" id="2_ftkeh"]

[node name="Mode" type="PanelContainer"]
show_behind_parent = true
custom_minimum_size = Vector2(200, 40)
offset_right = 280.0
offset_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_43m4g")
script = ExtResource("2_ftkeh")
blockActions = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_use_custom_anchors = true

[node name="TitleBar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="WindowName" type="Label" parent="VBoxContainer/TitleBar"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 1
text = "Mode"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Offline" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Offline"

[node name="Online" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Online"

[node name="Host" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host"

[connection signal="gui_input" from="." to="." method="OnGuiInput"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Offline" to="." method="_on_offline_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Online" to="." method="_on_online_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Host" to="." method="_on_host_pressed"]
